--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "prepare": "husky",
+    "clean": "prettier --write ."
   },
   "jest": {
     "preset": "jest-expo"
@@ -36,9 +38,12 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@expo/ngrok": "^4.1.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "~18.2.45",
+    "husky": "^9.0.11",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
+    "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
