--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "native-wind-supabase-template",
+  "name": "spacer",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
