--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-web": "~0.19.6",
     "tailwind-rn": "^4.2.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-rn": "^1.0.2"
+    "tailwindcss-rn": "^1.0.2",
+    "expo-linear-gradient": "~12.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
