--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
+    "supabase": "^1.153.4",
     "tailwind-rn": "^4.2.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-rn": "^1.0.2"
