--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
+    "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
@@ -37,8 +39,7 @@
     "react-native-web": "~0.19.6",
     "tailwind-rn": "^4.2.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-rn": "^1.0.2",
-    "expo-linear-gradient": "~12.7.2"
+    "tailwindcss-rn": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
