--- a/package.json
+++ b/package.json
@@ -43,16 +43,19 @@
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.6.4",
     "supabase": "^1.153.4",
     "tailwind-rn": "^4.2.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-rn": "^1.0.2"
+    "tailwindcss-rn": "^1.0.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@expo/ngrok": "^4.1.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "~18.2.45",
+    "@types/uuid": "^9.0.8",
     "husky": "^9.0.11",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
